<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="E_Cylinder_Sta" Id="{b1ddcbc7-2361-44b8-ad4c-8fb6e9cd6176}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_Cylinder_Sta :
(
	Cyl_Sta_None	:= 0,
	Cyl_Sta_Fwd 	:= 1,
	Cyl_Sta_Rev		:= 2,
	Cyl_Sta_Err		:= 3
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>